# faaz.dev

./: .eslintrc.js  .eslintrc.json  .gitignore  .vercelignore  README.md  bun.lockb  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
backend/: Cargo.toml  README.md
backend/src/: main.rs  server.rs  types.rs  utils.rs
components/: FormatTime.vue  MeBase.vue  ProjectCard.vue  SongCard.vue  SpotifyEmbed.vue
components/OgImage/: MePage.vue
components/logos/: DiscordLogo.vue  GithubLogo.vue  JavascriptLogo.vue  KeyLogo.vue  LicenseLogo.vue  MailLogo.vue  PostgreSQLLogo.vue  PythonLogo.vue  RedisLogo.vue  RepositoryLogo.vue  RustLogo.vue  TailwindLogo.vue  VueLogo.vue
components/segments/: IndexHero.vue  IndexMedian.vue  IndexMusic.vue
lib/lanyard/: index.ts  types.ts
lib/lastfm/: index.ts  types.ts
pages/: index.vue
pages/me/: projects.vue  songs.vue
plugins/: floating-vue.ts
public/: ducki.pub  index.html  key.pbk  site.webmanifest
server/api/: ping.ts  songs.ts
server/api/images/: [...].ts
src/: App.jsx  App.vue  global.css  index.css  index.js  index.jsx  main.ts  payloads.ts  types.ts
src/components/: FormatTime.vue  NavBar.jsx  ProjectCard.vue  Wrapper.vue  container.jsx
src/pages/: 404.jsx  About.jsx  Construction.jsx  Home.jsx  Project.jsx  Projects.jsx
src/router/: index.ts
src/styles/: global.css
src/views/: HomeView.vue
styles/: global.css
utils/: constants.ts  functions.ts  types.ts
