[package]
name = "activity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
shuttle-secrets = "0.19.0"
shuttle-service = { version = "0.19.0" }
shuttle-runtime = { version = "0.19.0" }
tracing = "0.1.37"
tokio = { version = "1.22.0", features = ["full"] }
axum = { version = "0.6.0", features = ["ws", "headers"] }
futures-util = "0.3.26"
serde_json = "1.0.94"
futures = "0.3.26"
sync_wrapper = "0.1.2"
serde = "1.0.153"
async-trait = "0.1.68"
